tests/ui/higher-ranked/subtype/hr-subtype.bound_a_vs_free_x.stderr
error[E0308]: mismatched types
  --> $DIR/hr-subtype.rs:54:13
   |
LL |               gimme::<$t1>(None::<$t2>);
   |               ^^^^^^^^^^^^^^^^^^^^^^^^^ one type is more general than the other
...
LL | / check! { bound_a_vs_free_x: (for<'a> fn(&'a u32),
LL | | fn(&'x u32)) }
   | |______________- in this macro invocation
   |
   = note: expected enum `Option<for<'a> fn(&'a _)>`
              found enum `Option<fn(&_)>`
   = note: this error originates in the macro `check` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
